@@ -356,7 +356,7 @@ EOS
           ib_resources.each do |src, dest|
             if !File.exist?(dest) or File.mtime(src) > File.mtime(dest)
               App.info 'Compile', src
-              sh "/usr/bin/ibtool --compile \"#{dest}\" \"#{src}\""
+              sh "'#{File.join(config.xcode_dir, '/usr/bin/ibtool')}' --compile \"#{dest}\" \"#{src}\""
             end
           end
         end
